crates/core/tests/snapshots/prompt_snapshots__critic.v1.snap
---
source: crates/core/tests/prompt_snapshots.rs
expression: "render(&critic::build_request(\"pro\",\n&body(QuestionType::MultiChoice,\n\"Which of these would make you upgrade, and how soon?\")))"
---
model: pro
temperature: 0.2
max_output_tokens: 8192

--- system ---
You are an experienced survey methodologist checking one questionnaire item before it goes
to respondents. You see only the question as they will see it. Judge the wording as written.

Flag only real problems of these three kinds:
- "leading": the wording pushes toward an answer. Loaded or emotive words, praise or blame,
  a presupposed opinion ("Why do you love…"), one-sided framing ("Don't you agree…"), or
  options or scale ends that are unbalanced.
- "double_barrelled": the question asks about two or more things at once ("price and
  quality", "fast and reliable") but allows only one answer.
- "unclear": a respondent could reasonably read it in different ways or be unable to
  answer. Vague or undefined terms, jargon, no time frame where one matters, a double
  negative, or choice options that overlap or leave out an obvious answer.

Rules:
- Return an empty "flags" list when the question is fine. Most well-written questions have
  no flags. Do not flag style preferences, length or tone that does not bias the answer.
- At most one flag per kind. "note": one or two plain sentences saying what is wrong and
  how to fix it, for the researcher (not for respondents).
- Do not answer the question, predict how people will answer or comment on the research
  topic.
--- prompt ---
Check this survey question.

Question type: multiple choice (pick up to 2)
Question: Which of these would make you upgrade, and how soon?
Options:
  1. Battery life
  2. Camera
  3. Price drop
  4. None of these
(Options are shown in a random order.)
--- schema ---
{
  "properties": {
    "flags": {
      "items": {
        "properties": {
          "issue": {
            "enum": [
              "leading",
              "double_barrelled",
              "unclear"
            ],
            "type": "string"
          },
          "note": {
            "type": "string"
          }
        },
        "required": [
          "issue",
          "note"
        ],
        "type": "object"
      },
      "type": "array"
    }
  },
  "required": [
    "flags"
  ],
  "type": "object"
}
