crates/core/tests/snapshots/prompt_snapshots__survey_draft.v1.suggest_more.snap
---
source: crates/core/tests/prompt_snapshots.rs
expression: "render(&draft::build_more_request(\"pro\", &brief,\n&[\"Which brand is your current phone?\".into()]))"
---
model: pro
temperature: 0.7
max_output_tokens: 16384

--- system ---
You are an experienced market-research methodologist. Draft a questionnaire for a synthetic
survey panel from the research brief you are given. A person will review, edit and approve
every question before it is used.

Rules:
- Write exactly the number of core questions and suggestions the brief asks for. Core
  questions form the survey in the order given; suggestions are optional extras a reviewer
  may add, covering angles the core questions leave out.
- One idea per question. Neutral wording: no leading, loaded or double-barrelled questions,
  no assumptions the respondent may not share (ask a screener first if needed).
- Types: "single_choice" and "multi_choice" (2–10 options, mutually exclusive for single
  choice; add "None of these" or "Other" where a respondent could otherwise be stuck),
  "likert" (a 1–5 or 1–7 scale with end labels), "numeric" (a range and a unit; money in
  the local currency of the countries surveyed), "open_ended" (at most 2 in the core set).
- Brand names: use real category terms, but write brands as placeholders like "[Brand A]"
  unless the brief names them.
- "code": a short label like "Q3_PRICE". "objective": which part of the research objective
  the question serves. "rationale": one sentence on why it is worth asking.
- Do not predict, label or hint at expected answers anywhere. The questionnaire must work
  whatever the results turn out to be.
- "intro": two or three sentences shown to respondents before the first question. Do not
  reveal the research objective or the client's hypothesis in it.
--- prompt ---
Research brief
- Research type: Market Response Survey (focus: purchase intent, price, drivers, barriers)
- Product category: mobile phone
- Countries surveyed: Canada
- Project title: Smartphone upgrade intent
- Research objective and requirements:
Understand what drives Canadians to replace their smartphone.

Write 0 core questions and 6 suggestions. The survey already has the questions below. Each suggestion must cover something they don't; do not repeat or reword them.
- Which brand is your current phone?
--- schema ---
{
  "properties": {
    "intro": {
      "type": "string"
    },
    "questions": {
      "items": {
        "properties": {
          "code": {
            "type": "string"
          },
          "max_choices": {
            "type": "integer"
          },
          "number_max": {
            "type": "number"
          },
          "number_min": {
            "type": "number"
          },
          "objective": {
            "type": "string"
          },
          "options": {
            "items": {
              "type": "string"
            },
            "type": "array"
          },
          "rationale": {
            "type": "string"
          },
          "scale_max": {
            "type": "integer"
          },
          "scale_max_label": {
            "type": "string"
          },
          "scale_min": {
            "type": "integer"
          },
          "scale_min_label": {
            "type": "string"
          },
          "text": {
            "type": "string"
          },
          "type": {
            "enum": [
              "single_choice",
              "multi_choice",
              "likert",
              "numeric",
              "open_ended"
            ],
            "type": "string"
          },
          "unit": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "text",
          "type",
          "objective",
          "rationale"
        ],
        "type": "object"
      },
      "type": "array"
    },
    "suggestions": {
      "items": {
        "properties": {
          "code": {
            "type": "string"
          },
          "max_choices": {
            "type": "integer"
          },
          "number_max": {
            "type": "number"
          },
          "number_min": {
            "type": "number"
          },
          "objective": {
            "type": "string"
          },
          "options": {
            "items": {
              "type": "string"
            },
            "type": "array"
          },
          "rationale": {
            "type": "string"
          },
          "scale_max": {
            "type": "integer"
          },
          "scale_max_label": {
            "type": "string"
          },
          "scale_min": {
            "type": "integer"
          },
          "scale_min_label": {
            "type": "string"
          },
          "text": {
            "type": "string"
          },
          "type": {
            "enum": [
              "single_choice",
              "multi_choice",
              "likert",
              "numeric",
              "open_ended"
            ],
            "type": "string"
          },
          "unit": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "text",
          "type",
          "objective",
          "rationale"
        ],
        "type": "object"
      },
      "type": "array"
    },
    "title": {
      "type": "string"
    }
  },
  "required": [
    "title",
    "intro",
    "questions",
    "suggestions"
  ],
  "type": "object"
}
